# phipsurv

./: .dockerignore  .gitignore  Dockerfile  ML_env.yml  README.md  pyproject.toml
configs/: config_survival_BC-Engl.yaml  config_survival_HCC.yaml
notebooks/: BC-Engl_survivalAnalysis.ipynb  survivalAnalysis_HCC-ICI_fig5.ipynb
scripts/: run_survival.sh
src/phipsurv/cli/: train_test.py
src/phipsurv/io/: data_handler.py
src/phipsurv/plots/: helpers.py  metrics_helpers.py
src/phipsurv/survival/: helpers.py  train_test_utils.py
src/survival.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/survival/cli/: main_survival_trainTest.py
src/survival/io/: dataHandler.py
src/survival/ml/: ML_survival_helpers.py
src/survival/plots/: metricsPlots_survival_helpers.py  plots_helpers.py
src/survival/utils/: peptidesFilter.py
